--- a/VAKidney/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/VAKidney/app/src/main/res/layout/activity_add_new_meal.xml
@@ -134,15 +134,15 @@
                     android:weightSum="2">
 
                     <LinearLayout
+                        android:id="@+id/dateLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:layout_marginTop="@dimen/app_standard_padding"
                         android:layout_weight="1"
                         android:background="@drawable/bg_white_rounded"
-                        android:orientation="vertical"
 
-                        >
+                        android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -154,8 +154,9 @@
                             <android.support.v7.widget.AppCompatImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
+                                android:padding="10dp"
                                 android:tint="@color/colorAccent"
-                                app:srcCompat="@drawable/ic_date_range" />
+                                app:srcCompat="@drawable/ic_date" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -209,15 +210,15 @@
 
 
                     <LinearLayout
+                        android:id="@+id/timeLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="@dimen/app_standard_padding"
                         android:layout_weight="1"
                         android:background="@drawable/bg_white_rounded"
-                        android:orientation="vertical"
 
-                        >
+                        android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -229,6 +230,7 @@
                             <android.support.v7.widget.AppCompatImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
+                                android:padding="10dp"
                                 android:tint="@color/colorAccent"
                                 app:srcCompat="@drawable/ic_clock" />
 
