--- a/VAKidney/app/src/main/res/layout/fragment_welcome1.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_welcome1.xml
@@ -11,11 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="20dp"
-        android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="20dp">
+        android:padding="10dp"
+        android:gravity="center">
 
         <TextView
             android:layout_width="match_parent"
@@ -76,7 +73,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="1dp"
             android:background="#2e7bca"
             android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
@@ -138,7 +135,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="1dp"
             android:background="#557630"
             android:gravity="right"
             android:layout_marginTop="10dp"
@@ -197,8 +194,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#ff7f32"
+            android:layout_height="1dp"
+            android:background="@color/colorAccent"
             android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="15dp"
