--- a/VAKidney/app/src/main/res/layout/item_grid_goal_addnew.xml
+++ b/VAKidney/app/src/main/res/layout/item_grid_goal_addnew.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.topcoder.vakidney.CustomView.SquareLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     android:background="@drawable/bg_white_rounded"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:gravity="center"
+    android:orientation="vertical">
 
 
 
@@ -14,25 +13,24 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            app:srcCompat="@drawable/ic_goal"
-            />
+            app:srcCompat="@drawable/ic_goal" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="5dp"
-            android:background="@color/colorLightGray"
-            />
+            android:background="@color/colorLightGray" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add New Goal"
-            android:layout_margin="@dimen/app_standard_padding"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="13dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/app_standard_padding"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Add New Goal"
+        android:textColor="@color/colorAccent"
+        android:textSize="13dp"
+        android:textStyle="bold" />
 
 </com.topcoder.vakidney.CustomView.SquareLinearLayout>
