--- a/VAKidney/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/VAKidney/app/src/main/res/layout/activity_add_new_meal.xml
@@ -280,121 +280,46 @@
                             android:textColor="@color/colorAccent"
                             android:textSize="13dp"
                             android:textStyle="bold" />
-
-
                     </LinearLayout>
 
                 </LinearLayout>
 
-
-                <TextView
+                <LinearLayout
+                    android:id="@+id/llMealDrug"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/app_standard_padding"
-                    android:text="Meal or Liquid Item"
-                    android:textColor="@color/colorLightDarkGray"
-                    android:textSize="12dp" />
-
-                <EditText
-                    android:id="@+id/mealOrliquidField"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/bg_round_white"
-                    android:paddingLeft="@dimen/app_standard_padding"
-                    android:paddingRight="@dimen/app_standard_padding" />
-
-
-                <TextView
-                    android:id="@+id/mealOrliquidFieldErrorTv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#ff7f32"
-                    android:visibility="gone"
-                    android:textSize="12dp"
-                    android:text="@string/generic_error_field"
-                    />
+                    android:orientation="vertical"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/app_standard_padding"
+                    android:gravity="center_horizontal">
+                    <TextView
+                        android:id="@+id/tvAddMeal"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/app_standard_padding"
-                            android:text="Amount"
-                            android:textColor="@color/colorLightDarkGray"
-                            android:textSize="12dp" />
-
-                        <EditText
-                            android:id="@+id/amountField"
-                            android:layout_width="match_parent"
-                            android:layout_height="35dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/bg_round_white"
-                            android:inputType="number"
-                            android:paddingLeft="@dimen/app_standard_padding"
-                            android:paddingRight="@dimen/app_standard_padding" />
-
-
-                        <TextView
-                            android:id="@+id/amountFieldErrorTv"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColor="#ff7f32"
-                            android:textSize="12dp"
-                            android:visibility="gone"
-                            android:text="@string/generic_error_field"
-                            />
-
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                        android:text="Add Meal"
+                        android:textSize="14sp"
+                        android:textColor="@color/colorPrimary"
+                        android:padding="@dimen/app_standard_padding"
+                        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+                    <TextView
+                        android:id="@+id/tvAddDrug"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/app_standard_padding"
-                            android:text="Unit"
-                            android:textColor="@color/colorLightDarkGray"
-                            android:textSize="12dp" />
-
-                        <android.support.v7.widget.AppCompatSpinner
-                            android:id="@+id/unitSpinner"
-                            android:layout_width="match_parent"
-                            android:layout_height="35dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@drawable/bg_round_white" />
-
-
-                        <TextView
-                            android:id="@+id/unitSpinnerErroTv"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColor="#ff7f32"
-                            android:textSize="12dp"
-                            android:visibility="gone"
-                            android:text="@string/generic_error_field"
-                            />
-
-                    </LinearLayout>
+                        android:textSize="14sp"
+                        android:padding="@dimen/app_standard_padding"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Add Drug"/>
                 </LinearLayout>
+
 
 
                 <LinearLayout
@@ -452,8 +377,6 @@
 
                     </RelativeLayout>
                 </LinearLayout>
-
-
 
                 <Button
                     android:id="@+id/btnAddNewMeal"
