--- a/VAKidney/app/src/main/res/layout/fragment_workout.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_workout.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/bg_white_rounded"
-
         >
 
         <LinearLayout
@@ -39,7 +38,6 @@
                 android:layout_marginLeft="@dimen/app_standard_padding"
                 android:orientation="vertical"
                 >
-
 
                 <TextView
                     android:layout_width="match_parent"
@@ -72,11 +70,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="5dp"
-            android:weightSum="3"
             >
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/llSyncData"
+                android:clickable="true"
+                android:focusable="true"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Sync Data"
                 android:layout_marginLeft="@dimen/app_standard_padding"
@@ -84,34 +84,27 @@
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
                 android:layout_weight="1"
-                android:gravity="right"
+                android:gravity="center"
                 android:textColor="@color/colorAccent"
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center" >
-
-                <LinearLayout
-                    android:layout_width="1dp"
-                    android:layout_height="30dp"
-                    android:background="@color/colorLightGray"
-                    ></LinearLayout>
-            </LinearLayout>
+            <View
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:background="@color/colorLightGray"
+                />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="Manage Device"
                 android:layout_marginLeft="@dimen/app_standard_padding"
                 android:layout_marginRight="@dimen/app_standard_padding"
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
-                android:layout_weight="1"
-                android:gravity="left"
+                android:gravity="center"
                 android:textColor="@color/colorAccent"
                 android:textSize="13dp"
                 android:textStyle="bold" />
@@ -144,8 +137,8 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginTop="@dimen/app_standard_padding"
-                app:arc_bottom_text="Run"
-                app:arc_bottom_text_size="15dp"
+                app:arc_bottom_text="Distance"
+                app:arc_bottom_text_size="12dp"
                 app:arc_finished_color="#ff7f32"
                 app:arc_progress="55"
                 app:arc_text_color="@color/colorDarkGray"
@@ -188,9 +181,13 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:background="@color/colorLightGray"
+                android:orientation="horizontal"
                 />
 
             <TextView
+                android:id="@+id/llSyncDistance"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sync Now"
@@ -219,7 +216,7 @@
                 android:layout_height="80dp"
                 android:layout_marginTop="@dimen/app_standard_padding"
                 app:arc_bottom_text="Steps"
-                app:arc_bottom_text_size="13dp"
+                app:arc_bottom_text_size="12dp"
                 app:arc_finished_color="#f3cf45"
                 app:arc_progress="55"
                 app:arc_text_color="@color/colorDarkGray"
@@ -262,166 +259,13 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:background="@color/colorLightGray"
+                android:orientation="horizontal"
                 />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sync Now"
-                android:layout_margin="@dimen/app_standard_padding"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="13dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/app_standard_padding"
-        android:weightSum="2"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_marginRight="5dp"
-            android:orientation="vertical"
-            android:background="@drawable/bg_white_rounded"
-            >
-
-
-            <com.topcoder.vakidney.CustomView.ArcProgress
-                android:id="@+id/arcJumping"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="@dimen/app_standard_padding"
-                app:arc_bottom_text="Jump Rope"
-                app:arc_bottom_text_size="10dp"
-                app:arc_finished_color="@color/colorAccent"
-                app:arc_progress="55"
-                app:arc_text_color="@color/colorDarkGray"
-                app:arc_unfinished_color="#e5e5e5"
-                app:icon_color="@color/colorAccent"
-                app:inside_drawable="@drawable/ic_jump_rope" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/tvJumping"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="45/80"
-                    android:textColor="@color/colorDarkGray"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/app_standard_padding"
-                    android:gravity="center"
-                    android:text="jump"
-                    android:textColor="@color/colorDarkGray"
-                    android:textSize="14dp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/colorLightGray"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sync Now"
-                android:layout_margin="@dimen/app_standard_padding"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="13dp" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:background="@drawable/bg_white_rounded"
-            >
-
-
-            <com.topcoder.vakidney.CustomView.ArcProgress
-                android:id="@+id/arcSwimming"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginTop="@dimen/app_standard_padding"
-                app:arc_bottom_text="Swimming"
-                app:arc_bottom_text_size="15dp"
-                app:arc_finished_color="#557630"
-                app:arc_progress="55"
-                app:arc_text_color="@color/colorDarkGray"
-                app:arc_unfinished_color="#e5e5e5"
-                app:icon_color="#557630"
-                app:inside_drawable="@drawable/ic_swimming" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/tvSwimming"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="1/3"
-                    android:textColor="@color/colorDarkGray"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/app_standard_padding"
-                    android:gravity="center"
-                    android:text="laps"
-                    android:textColor="@color/colorDarkGray"
-                    android:textSize="14dp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="5dp"
-                android:background="@color/colorLightGray"
-                />
-
-            <TextView
+                android:id="@+id/llSyncStep"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sync Now"
