Working on chart.

--- a/VAKidney/app/src/main/res/layout/activity_add_new_goal.xml
+++ b/VAKidney/app/src/main/res/layout/activity_add_new_goal.xml
@@ -492,7 +492,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
-                android:text="Medication"
+                android:text="Recommendations"
                 android:textColor="@color/colorAccent"
                 android:textSize="10dp" />
         </LinearLayout>
@@ -530,7 +530,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
-                android:text="Food"
+                android:text="Food/Drug Intake"
                 android:textColor="@color/colorAccent"
                 android:textSize="10dp" />
         </LinearLayout>
@@ -568,7 +568,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:gravity="center"
-                android:text="Workout"
+                android:text="Activity"
                 android:textColor="@color/colorAccent"
                 android:textSize="10dp" />
         </LinearLayout>
