--- a/VAKidney/app/src/main/res/layout/app_bar_main.xml
+++ b/VAKidney/app/src/main/res/layout/app_bar_main.xml
@@ -189,9 +189,8 @@
                 android:gravity="center"
                 android:layout_marginBottom="4dp"
                 android:textColor="@color/colorAccent"
-                android:lines="1"
                 android:text="Recommendations"
-                android:textSize="9sp"
+                android:textSize="10sp"
                 />
         </LinearLayout>
 
@@ -232,7 +231,7 @@
                 android:gravity="center"
                 android:layout_marginBottom="4dp"
                 android:textColor="@color/colorAccent"
-                android:text="Food/Drug"
+                android:text="Food/Drug Intake"
                 android:textSize="10dp"
                 />
         </LinearLayout>
