--- a/VAKidney/app/src/main/res/layout/popup_add_chart.xml
+++ b/VAKidney/app/src/main/res/layout/popup_add_chart.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@color/colorLightGray"
+    android:orientation="vertical"
     android:padding="@dimen/app_standard_padding">
-
-    <TextView
-        android:id="@+id/textTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/app_standard_padding"
-        android:text="Meal or Liquid Item"
-        android:textColor="@color/colorLightDarkGray"
-        android:textSize="12dp" />
-
-    <EditText
-        android:id="@+id/mealOrliquidField"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/bg_round_white"
-        android:paddingLeft="@dimen/app_standard_padding"
-        android:paddingRight="@dimen/app_standard_padding" />
-
-
-    <TextView
-        android:id="@+id/mealOrliquidFieldErrorTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#ff7f32"
-        android:visibility="gone"
-        android:textSize="12dp"
-        android:text="@string/generic_error_field"
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:textColor="@color/colorLightDarkGray"
+            android:textSize="12dp" />
+
+        <TextView
+            android:id="@+id/dateText"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="5dp"
+            android:text="Mar 13, 2018"
+            android:gravity="center_vertical"
+            android:textColor="@color/text_black"
+            android:clickable="true"
+            android:focusable="true"
+            android:textSize="13sp"
+            android:paddingLeft="@dimen/app_standard_padding"
+            android:background="@drawable/bg_round_white" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/app_standard_padding"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -52,7 +52,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/app_standard_padding"
                 android:text="Amount"
                 android:textColor="@color/colorLightDarkGray"
                 android:textSize="12dp" />
@@ -67,19 +66,7 @@
                 android:paddingLeft="@dimen/app_standard_padding"
                 android:paddingRight="@dimen/app_standard_padding" />
 
-
-            <TextView
-                android:id="@+id/amountFieldErrorTv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#ff7f32"
-                android:textSize="12dp"
-                android:visibility="gone"
-                android:text="@string/generic_error_field"
-                />
-
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,7 +78,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/app_standard_padding"
                 android:text="Unit"
                 android:textColor="@color/colorLightDarkGray"
                 android:textSize="12dp" />
@@ -101,30 +87,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginTop="5dp"
-                android:spinnerMode="dialog"
-                android:background="@drawable/bg_round_white" />
-
-
-            <TextView
-                android:id="@+id/unitSpinnerErroTv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#ff7f32"
-                android:textSize="12dp"
-                android:visibility="gone"
-                android:text="@string/generic_error_field"
-                />
+                android:background="@drawable/bg_round_white"
+                android:spinnerMode="dialog" />
 
         </LinearLayout>
     </LinearLayout>
+
     <Button
-        android:id="@+id/btnAddNewMeal"
+        android:id="@+id/addBtn"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="@dimen/app_standard_padding"
         android:background="@drawable/bg_login_btn"
         android:elevation="5dp"
-        android:textSize="13dp"
-        android:text="Add Meal"
-        android:textColor="@color/colorWhite" />
+        android:text="Add Record"
+        android:textColor="@color/colorWhite"
+        android:textSize="13dp" />
 </LinearLayout>
